--- a/react-multi-page-website/package.json
+++ b/react-multi-page-website/package.json
@@ -9,9 +9,10 @@
     "react": "^18.0.0",
     "react-bootstrap": "^2.2.3",
     "react-dom": "^18.0.0",
+    "react-hook-form": "^7.29.0",
     "react-modal": "^3.14.4",
     "react-multi-modal": "^1.0.0",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
